# Nova

./: README.md
kernel/: Cargo.toml
kernel/src/: main.rs
kernel/src/console/: mod.rs
kernel/src/environment/boot_protocol/: limine.rs
kernel/src/hal/drivers/display/: mod.rs
kernel/src/hal/drivers/display/common/: display_id.rs
kernel/src/hal/drivers/display/limine_fb/: mod.rs
kernel/src/hal/drivers/sw_graphics/framebuffer/: mod.rs
kernel/src/hal/drivers/uart/uart_16550/: mod.rs
kernel/src/hal/isa/init/aarch64/: mod.rs
kernel/src/hal/isa/memory/aarch64/: memory.rs
kernel/src/memory/pmem/: mod.rs
kernel/src/utils/: io.rs  mod.rs
